<resources>
    <string name="app_name">ApTap</string>
    <string name="facebook_app_id">319271545212795</string>
    <string name="fb_login_protocol_scheme">fb319271545212795</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google_plus">Login with google plus</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="action_search">Search</string>
    <string name="add_phone_number_dialog">Add your mobile number</string>
    <string name="phone_number_cancel_msg">Without mobile number you can not login into application.</string>
    <string name="add_otp_dialog">OTP</string>
    <string name="ok_button_title">OK</string>
    <string name="cancel_button_title">CANCEL</string>
    <string name="verify_button_title">VERIFY</string>
    <string name="send_otp_button_title">SEND OTP</string>
    <string name="QR_text"> Visit  <b><u>www.aptap.in/login</u></b>  on your computer and scan the QR code</string>
    <string name="add_button_title">ADD</string>
    <string name="update_button_title">UPDATE</string>
    <string name="block_button_title">BLOCK</string>
    <string name="send_event_button_title">SEND EVENT</string>
    <string name="submit_button_title">SUBMIT</string>
    <string name="create_floor">Floor</string>
    <string name="create_block_title_type">Block Name</string>
    <string name="signup_personal_details">Personal Details</string>
    <string name="signup_society_details">Society Details</string>
    <string name="signup_security_details">Security Details</string>
    <string name="signup_utilities_details">Utilities</string>
    <string name="signup_interests_details">Interests</string>
    <string name="signup_first_name">First name</string>
    <string name="signup_last_name">Last name</string>
    <string name="signup_phone">Phone number</string>
    <string name="signup_gmail">Gmail id</string>
    <string name="signup_facebook">Facebook id</string>
    <string name="signup_hash_tag">User hashtag</string>
    <string name="signup_date_of_birth">DoB</string>
    <string name="signup_gender">Gender</string>
    <string name="signup_gender_male">Male</string>
    <string name="signup_gender_female">Female</string>
    <string name="signup_pancard">Pancard Number</string>
    <string name="signup_aadhar">Aadhar Number</string>
    <string name="signup_license">Driving License Number</string>
    <string name="signup_passport">Passport Number</string>
    <string name="signup_gas_meter">Gas Meter</string>
    <string name="signup_water_meter">Water Meter</string>
    <string name="signup_electricity_bill">Electricity Bill Number</string>
    <string name="signup_gas_connection">Gas Connection</string>
    <string name="signup_water_connection">Water Connection</string>
    <string name="signup_settop_box">SetTop Box Number</string>
    <string name="signup_internet_bill">Internet</string>
    <string name="signup_broadband_bill">Broadband</string>
    <string name="signup_municipal_payments">Municipal Payments</string>
    <string name="signup_insurance_payments">Insurance </string>
    <string name="signup_location">Location</string>
    <string name="signup_button">SIGN UP</string>
    <string name="title_activity_home">APTAP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Coming Soon</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_calendar_title">Calendar</string>
    <string name="nav_archives_title">Archives</string>
    <string name="nav_administration_title">Administration</string>
    <string name="nav_member_management_title">Member Management</string>
    <string name="nav_security_title"> Visitor / Security</string>
    <string name="nav_ice_title">Emergency Contacts</string>
    <string name="nav_setting_title">Settings</string>
    <string name="nav_support_title">Support</string>
    <string name="nav_about_us_title">About Us</string>
    <string name="web_login">Web Login</string>
    <string name="nav_logout_title">Logout</string>
    <string name="feed_item_menu_report_abuse">Report abuse</string>
    <string name="feed_item_menu_un_follow_person">Un-follow person </string>
    <string name="feed_item_menu_un_follow_group">Un-follow group</string>
    <string name="admin_notice_pager">NoticePagerFragment</string>
    <string name="tab_home">Home</string>
    <string name="tab_society">Society</string>
    <string name="tab_service">Services</string>
    <string name="tab_account">Accounts</string>
    <string name="tab_admin_managment">Management</string>
    <string name="tab_admin_messages">Messages</string>
    <string name="tab_admin_enotice">E Notice board</string>
    <string name="admin_management_graph_title">Management Data &amp; Pending Items</string>
    <string name="circle_title">Accounting Collections &amp; Expense</string>
    <string name="circle_vendor">Vendor</string>
    <string name="circle_member">Member</string>
    <string name="circle_issue">Issue</string>
    <string name="circle_asset">Asset</string>
    <string name="text_post_send_button">Send Post</string>
    <string name="text_post">Post</string>
    <string name="text_post_type">Post type</string>
    <string name="text_post_public_type">Public</string>
    <string name="text_post_private_type">Private</string>
    <string name="text_post_society_type">Society</string>
    <string name="text_post_question">Ask your question?</string>
    <string name="text_issue_title">Title</string>
    <string name="text_post_add_photo">Add photo</string>
    <string name="text_post_add_video">Add video</string>
    <string name="text_post_tag">Tag post</string>
    <string name="text_post_title">Write your text here..</string>
    <string name="text_post_description">Write your post description..</string>
    <string name="text_society_switch">Society</string>
    <string name="text_issue_file_attachment">File attachment</string>
    <string name="text_issue_flat_number">Flat number</string>
    <string name="text_address_line">Address Line1</string>
    <string name="text_address">Address</string>
    <string name="text_type_here">Type here..</string>
    <string name="text_vendor_assignment">Vendor assignment</string>
    <string name="text_vendor_in_house">In House</string>
    <string name="text_issue_description">Description (300)</string>
    <string name="issue_management_graph_title">Complaints Status &amp; Analytics</string>
    <string name="issue_header_id">IssueId</string>
    <string name="issue_header_status">Status</string>
    <string name="issue_header_type">Issue Type</string>
    <string name="issue_header_category">Category</string>
    <string name="spinner_default">Select</string>
    <string name="member_add_menu">Add Member</string>
    <string name="member_import_menu">Import</string>
    <string name="member_export_menu">Export</string>
    <string name="text_member_switch">Member</string>
    <string name="text_staff_switch">Staff</string>
    <string name="text_member_mobile">Mobile</string>
    <string name="text_otp">Otp</string>
    <string name="text_member_name">First Name</string>
    <string name="text_email">Email</string>
    <string name="text_member_last_name">Last Name</string>
    <string name="text_member_flat_number">Flat</string>
    <string name="text_member_intercom">Intercom</string>
    <string name="text_member_tenant">Tenant</string>
    <string name="text_member_owner">Owner</string>
    <string name="text_member_parking_number">Parking Slot</string>
    <string name="text_member_vehicle_number">Vehicle number</string>
    <string name="text_member_water_meter">Water Meter</string>
    <string name="text_member_gas_meter">Gas meter number</string>
    <string name="text_member_admin_switch">Admin</string>
    <string name="text_member_exit_switch">Exit</string>
    <string name="member_header_name">Member Name</string>
    <string name="member_header_block">Block</string>
    <string name="member_header_flat">Flat</string>
    <string name="member_temp_row_data">10th Block</string>
    <string name="member_gas_meter_data">Gas Meter</string>
    <string name="create_member_block_title">Block / Wing</string>
    <string name="create_member_dummy_data_1">Block 5</string>
    <string name="create_member_dummy_data_2">Block 3</string>
    <string name="post_title">Title</string>
    <string name="post_title_write_msg">Write your title here..</string>
    <string name="post_description">Post</string>
    <string name="post_description_write_msg">Write your post description here..</string>
    <string name="create_asset_title_name">Enter Asset Name</string>
    <string name="create_asset_title_email">Email Address</string>
    <string name="create_asset_title_type">Asset Type</string>
    <string name="flat_no">Flat No</string>
    <string name="profile">Profile</string>
    <string name="block">Block</string>
    <string name="create_asset_title_capacity">Capacity</string>
    <string name="create_asset_title_maintenance">Maintenance</string>
    <string name="create_asset_title_price">Price (per hour)</string>
    <string name="create_asset_title_starttime">Start time</string>
    <string name="create_asset_title_endtime">End time</string>
    <string name="create_vendor_title_id">Enter Vendor Id</string>
    <string name="create_vendor_title_name">Enter Asset Name</string>
    <string name="create_vendor_title_category">Category</string>
    <string name="create_vendor_title_price">Price card (Per hour)</string>
    <string name="create_vendor_title_location">Location</string>
    <string name="create_vendor_title_days">Days availalbe</string>
    <string name="create_event_title_startdate">Start Date</string>
    <string name="create_event_title_enddate">End Date</string>
    <string name="create_event_title_add_invitees">Add Invitees</string>
    <string name="create_event_title_send_sms">Send SMS</string>
    <string name="create_event_title_ticket">Ticket</string>
    <string name="create_event_title_ticket_cost">Cost Per Ticket</string>
    <string name="create_event_title_atendees">No of attendees</string>
    <string name="create_event_title_price">Price</string>
    <string name="create_classified_title_name">Classified name</string>
    <string name="create_classified_title_type">Type</string>
    <string name="create_classified_title_upload_pic">Upload photos</string>
    <string name="create_classified_title_place">Place</string>
    <string name="create_classified_title_user_name">Name</string>
    <string name="create_classified_title_mobile">Mobile</string>
    <string name="otp_error_msg_blank">Please enter otp.</string>
    <string name="assets_header_name">Assets Name</string>
    <string name="assets_header_email">Email</string>
    <string name="assets_header_type">Type</string>
    <string name="assets_header_capacity">Capacity</string>
    <string name="vendor_header_id">Vendor Id</string>
    <string name="vendor_header_name">Vendor Name</string>
    <string name="vendor_header_category">Category</string>
    <string name="vendor_header_location">Location</string>
</resources>