<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:id="@+id/vendorRowItem"
    android:orientation="horizontal">

    <com.app.aptap.ui.CustomTextView
        android:id="@+id/vendorId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/vendor_header_id" />

    <com.app.aptap.ui.CustomTextView
        android:id="@+id/vendorName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/vendor_header_name" />


    <com.app.aptap.ui.CustomTextView
        android:id="@+id/vendorCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/vendor_header_category" />


    <com.app.aptap.ui.CustomTextView
        android:id="@+id/vendorLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/vendor_header_location" />


</LinearLayout>