<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:id="@+id/memberRowItem"
    android:orientation="horizontal">

    <com.app.aptap.ui.CustomTextView
        android:id="@+id/memberName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/issue_header_id" />


    <com.app.aptap.ui.CustomTextView
        android:id="@+id/memberBlock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/member_temp_row_data" />


    <com.app.aptap.ui.CustomTextView
        android:id="@+id/memberFlat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/issue_header_category" />


</LinearLayout>