<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:gravity="center_vertical"
    android:layout_marginLeft="@dimen/padding_5_dp"
    android:layout_marginRight="@dimen/padding_5_dp"
    android:layout_marginTop="@dimen/padding_5_dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@color/memberHeaderRowColor"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/issueId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:gravity="center_vertical"
        android:text="@string/issue_header_id" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".95">

        <!-- INPUT -->
        <com.app.aptap.ui.CustomTextView
            android:id="@+id/issueType"
            style="@style/TextViewStyleSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/issue_header_type"
            android:inputType="text"
            android:padding="@dimen/padding_5_dp">
        </com.app.aptap.ui.CustomTextView>

        <!-- ICON -->
        <ImageView
            android:id="@+id/issueTypeIcon"
            android:layout_width="@dimen/edit_text_image_height_width"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/issueType"
            android:padding="@dimen/padding_5_dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/down_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!-- INPUT -->
        <com.app.aptap.ui.CustomTextView
            android:id="@+id/issueCategoryType"
            style="@style/TextViewStyleSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/issue_header_category"
            android:inputType="text"
            android:padding="@dimen/padding_5_dp">
        </com.app.aptap.ui.CustomTextView>

        <!-- ICON -->
        <ImageView
            android:id="@+id/issueCategoryTypeIcon"
            android:layout_width="@dimen/edit_text_image_height_width"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/issueCategoryType"
            android:padding="@dimen/padding_5_dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/down_arrow" />

    </RelativeLayout>


    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.15"
        android:gravity="center_vertical"
        android:text="@string/issue_header_status" />


</LinearLayout>