<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/securityDetailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_10_dp"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/colorWhite">

        <!-- ICON -->
        <ImageView
            android:id="@+id/pancardNumber"
            android:layout_width="@dimen/edit_text_image_height_width"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_5_dp"
            android:src="@drawable/user" />

        <!-- INPUT -->
        <com.app.aptap.ui.CustomEditText
            android:id="@+id/userPanNumber"
            style="@style/EditTextStyleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/pancardNumber"
            android:background="@drawable/edit_text_grey_ul"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/signup_pancard"
            android:inputType="text"
            android:padding="@dimen/padding_5_dp"></com.app.aptap.ui.CustomEditText>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/hintColor">

    </View>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/colorWhite">

        <!-- ICON -->
        <ImageView
            android:id="@+id/aadharNumber"
            android:layout_width="@dimen/edit_text_image_height_width"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_5_dp"
            android:src="@drawable/user" />

        <!-- INPUT -->
        <com.app.aptap.ui.CustomEditText
            android:id="@+id/userAadharNumber"
            style="@style/EditTextStyleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/aadharNumber"
            android:background="@drawable/edit_text_grey_ul"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/signup_aadhar"
            android:inputType="numberSigned"
            android:padding="@dimen/padding_5_dp"></com.app.aptap.ui.CustomEditText>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/hintColor">

    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/colorWhite">

        <!-- ICON -->
        <ImageView
            android:id="@+id/drivingLicenseIcon"
            android:layout_width="@dimen/edit_text_image_height_width"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_5_dp"
            android:src="@drawable/user" />

        <!-- INPUT -->
        <com.app.aptap.ui.CustomEditText
            android:id="@+id/userDrivingLicenseNumber"
            style="@style/EditTextStyleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/drivingLicenseIcon"
            android:background="@drawable/edit_text_grey_ul"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/signup_license"
            android:inputType="textPassword"
            android:padding="@dimen/padding_5_dp"></com.app.aptap.ui.CustomEditText>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/hintColor">

    </View>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/colorWhite">

        <!-- ICON -->
        <ImageView
            android:id="@+id/passportIcon"
            android:layout_width="@dimen/edit_text_image_height_width"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_5_dp"
            android:src="@drawable/user" />

        <!-- INPUT -->
        <com.app.aptap.ui.CustomEditText
            android:id="@+id/userPassportNumber"
            style="@style/EditTextStyleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/passportIcon"
            android:background="@drawable/edit_text_grey_ul"
            android:backgroundTint="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/signup_passport"
            android:inputType="textPassword"
            android:padding="@dimen/padding_5_dp"></com.app.aptap.ui.CustomEditText>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_left_right_10_dp"
        android:layout_marginRight="@dimen/margin_left_right_10_dp"
        android:background="@color/hintColor">

    </View>


</LinearLayout>